Uploaded a temporary README

--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
     "description": "Starting off!",
     "permissions": ["activeTab","declarativeContent", "storage"],
     "background": {
-      "scripts": ["gen_pw.js"],
+      "scripts": ["src/gen_pw.js"],
       "persistent": false
     },
     "browser_action": {
         "name" : "pw_gen_page",
-        "default_popup": "extensionInterface.html"
+        "default_popup": "src/extensionInterface.html"
     },
     
     "manifest_version": 2
